SFA01Shared/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Main</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Authorized_Capital__c</fullName>
        <label>Authorized Capital</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRN_Number__c</fullName>
        <label>BRN Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Myanmar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thailand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <picklist>
            <picklistValues>
                <fullName>Johor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kedah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kelantan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Melaka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negeri Sembilan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pahang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perlis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulau Pinang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sabah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sarawak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selangor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terengganu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W.P. Kuala Lumpur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W.P. Labuan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W.P. Putrajaya</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>60000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Postal_Code__c</fullName>
        <label>Billing Zip/Postal Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birth_Date__c</fullName>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <label>Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CPC_ID__c</fullName>
        <label>CPC ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Churn_Propensity__c</fullName>
        <label>Churn Propensity</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Email__c</fullName>
        <label>Company Email</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Industry,&quot;&quot;),&quot;Industry, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(BillingCity) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Type,&quot;&quot;), &quot;Type&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Industry,&quot;&quot;), 0,20) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,20) + IF( LEN(BillingCity) = 0, 0,20) + IF(LEN(Phone) = 0, 0,20) + IF( ISPICKVAL(Type,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E&amp;U</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FSI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Company__c</fullName>
        <label>Employer Company</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Year__c</fullName>
        <label>Financial Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formerly_Known__c</fullName>
        <label>Formerly Known</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Identification_Number__c</fullName>
        <label>Identification Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identification_Type__c</fullName>
        <label>Identification Type</label>
        <picklist>
            <picklistValues>
                <fullName>Army Identity Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Registration Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Embassy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goverment Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMNET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issued_Country__c</fullName>
        <label>Issued Country</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thailand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Date_by_SSM__c</fullName>
        <label>Last Updated  Date by SSM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_No__c</fullName>
        <label>License No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <picklist>
            <picklistValues>
                <fullName>Type A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MSC_Class_Code__c</fullName>
        <label>MSC Class Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSC_Status_Code__c</fullName>
        <label>MSC Status Code</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_Business_Activity__c</fullName>
        <label>Main Business Activity</label>
        <length>60000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Segment_Code__c</fullName>
        <label>New Segment Code</label>
        <picklist>
            <picklistValues>
                <fullName>CAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BNF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HLT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PNC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SNP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Segment_Sector__c</fullName>
        <label>New Segment Sector</label>
        <picklist>
            <picklistValues>
                <fullName>SMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MNC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W70</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_Of_Branches_International__c</fullName>
        <label>No Of Branches (International)</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_Of_Branches_Local__c</fullName>
        <label>No Of Branches (Local)</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201-500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501-1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;1000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Paid_Up_Capital__c</fullName>
        <label>Paid Up Capital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <label>Prefix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Realized_Revenue__c</fullName>
        <label>Realized Revenue</label>
        <summarizedField>Opportunity.Realized_Revenue__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Central Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Coast Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern Region</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goverment Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multinational Corporation (Global)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Segment_Code__c</fullName>
        <label>Segment Code</label>
        <picklist>
            <picklistValues>
                <fullName>A10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C40</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iSFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Outlet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM Web Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Round Table</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Door to Door</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Counter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agent/Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiters Clearance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mini Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Win Over</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SME</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TM_Currency__c</fullName>
        <label>TM Currency</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Employee__c</fullName>
        <label>Total Employee</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Turnover__c</fullName>
        <label>Total Turnover</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valid_from_Date__c</fullName>
        <label>Valid from Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_to_Date__c</fullName>
        <label>Valid to Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Wholesale_ID__c</fullName>
        <label>Wholesale ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone_Area__c</fullName>
        <label>Zone (Area)</label>
        <picklist>
            <picklistValues>
                <fullName>Northern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SABAH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SARAWAK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>BRN_Number__c</columns>
        <columns>Division__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Master_Account_Page_Layout</fullName>
        <active>true</active>
        <label>Master Account Page Layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>Slave_Account_Page_Layout</fullName>
        <active>true</active>
        <label>Slave Account Page Layout</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Account_Name_cannot_changed</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISCHANGED( Name ), 
NOT($Profile.Name = &quot;System Administrator&quot;))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Account name cannot be edit</errorMessage>
    </validationRules>
</CustomObject>